race_engine_update

--- a/torcs/torcs/src/Makefile
+++ b/torcs/torcs/src/Makefile
@@ -19,7 +19,7 @@
 # #### The Open Racing Car Simulator ####
 
 
-SHIPSUBDIRS	= drivers modules libs
+SHIPSUBDIRS	= drivers modules libs raceman
 
 EXPINCDIRS	= interfaces libs linux modules
 
