--- a/torcs/torcs/data/cars/models/porsche-gt3rs/Makefile
+++ b/torcs/torcs/data/cars/models/porsche-gt3rs/Makefile
@@ -22,9 +22,9 @@ DATADIR   = cars/porsche-gt3rs
 DATA      = porsche-gt3rs.xml porsche-gt3rs.ac porsche-gt3rs.rgb tex-wheel.rgb porsche-gt3rs-src.ac porsche-gt3rs-lod1.acc
 # texmapper.xml porsche-gt3rs-base.ac porsche-gt3rs-lod1.ac
 
-data-cars-gt_PKGFILES	= $(DATA)
+data-cars-extra_PKGFILES	= $(DATA)
 
-data-cars-gt_PKGDIR	= $(DATADIR)
+data-cars-extra_PKGDIR	= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
