--- a/torcs/torcs/data/cars/models/xj-220/Makefile
+++ b/torcs/torcs/data/cars/models/xj-220/Makefile
@@ -20,9 +20,9 @@ DATADIR      = cars/xj-220
 
 DATA         = xj-220.xml xj-220.rgb xj-220.ac tex-wheel.rgb xj-220-base.ac texmapper.xml xj-220-src.ac
 
-data-cars-gt_PKGFILES	= $(DATA)
+data-cars-extra_PKGFILES	= $(DATA)
 
-data-cars-gt_PKGDIR	= $(DATADIR)
+data-cars-extra_PKGDIR	= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
