--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -19,7 +19,9 @@ AC_INIT(Make-config.in)
 AM_INIT_AUTOMAKE(torcs, 1.2.0)
 
 dnl Checks for programs.
-AC_PROG_CC
+AC_LANG_CPLUSPLUS
+
+#AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_RANLIB
 AC_PROG_INSTALL
@@ -87,8 +89,6 @@ AC_CHECK_LIB(GLU, main,,AC_MSG_ERROR([Can't find libGLU. Please check your insta
 AC_CHECK_LIB(glut, main,,AC_MSG_ERROR([Can't find libglut. Please check your installation and add the correct paths!]))
 
 dnl Checks for plib libraries.
-AC_LANG_CPLUSPLUS
-
 AC_CHECK_LIB(plibul, main,,AC_MSG_ERROR([Can't find libplibul. Please check your installation and add the correct paths!]))
 AC_CHECK_LIB(plibsg, main,,AC_MSG_ERROR([Can't find libplibsg. Please check your installation and add the correct paths!]))
 AC_CHECK_LIB(plibsl, main,,AC_MSG_ERROR([Can't find libplibsl. Please check your installation and add the correct paths!]))
