--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -19,9 +19,11 @@ AC_INIT(Make-config.in)
 AM_INIT_AUTOMAKE(torcs, 1.2.0)
 
 dnl Checks for programs.
+AC_PROG_CC
+AC_PROG_CPP
+
 AC_LANG_CPLUSPLUS
 
-#AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_RANLIB
 AC_PROG_INSTALL
