--- a/torcs/torcs/data/cars/models/porsche-gt3rs/Makefile
+++ b/torcs/torcs/data/cars/models/porsche-gt3rs/Makefile
@@ -19,7 +19,7 @@
 
 DATADIR   = cars/porsche-gt3rs
 
-DATA      = porsche-gt3rs.xml porsche-gt3rs.ac porsche-gt3rs.rgb tex-wheel.rgb porsche-gt3rs-src.ac porsche-gt3rs-lod1.acc
+DATA      = porsche-gt3rs.xml porsche-gt3rs.acc porsche-gt3rs.rgb tex-wheel.rgb porsche-gt3rs-src.ac porsche-gt3rs-lod1.acc
 # texmapper.xml porsche-gt3rs-base.ac porsche-gt3rs-lod1.ac
 
 data-cars-extra_PKGFILES	= $(DATA)
