--- a/torcs/torcs/data/cars/models/gt40/Makefile
+++ b/torcs/torcs/data/cars/models/gt40/Makefile
@@ -17,10 +17,11 @@
 
 DATADIR   = cars/gt40
 
-DATA      = gt40.xml gt40.acc \
-	    tex-wheel.rgb gt40.rgb gt40-src.ac
+DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
+            $(shell find *.rgb -maxdepth 0 -type f -print) \
+            $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA)
+data-cars-extra_PKGFILES	= $(DATA) gt40.xcf $(shell find *.ac -maxdepth 0 -type f -print)
 
 data-cars-extra_PKGDIR	= $(DATADIR)
 
