--- a/torcs/torcs/data/cars/models/155-DTM/Makefile
+++ b/torcs/torcs/data/cars/models/155-DTM/Makefile
@@ -19,9 +19,11 @@
 
 DATADIR   = cars/155-DTM
 
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print)  $(shell find *.rgb -maxdepth 0 -type f -print)  $(shell find *.ac -maxdepth 0 -type f -print)
+DATA      = $(shell find *.xml -maxdepth 0 -type f -print)  \
+	    $(shell find *.rgb -maxdepth 0 -type f -print)  \
+	    $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA)
+data-cars-extra_PKGFILES	= $(DATA) 155-DTM-1024.xcf $(shell find *.ac -maxdepth 0 -type f -print)
 
 data-cars-extra_PKGDIR		= $(DATADIR)
 
