--- a/torcs/torcs/data/cars/models/acura-nsx-sz/acura-nsx-sz-lod1.ac
+++ b/torcs/torcs/data/cars/models/acura-nsx-sz/acura-nsx-sz-lod1.ac
@@ -1,5 +1,5 @@
 AC3Db
-MATERIAL "ac3dmat1" rgb 1 1 1  amb 0.2 0.2 0.2  emis 0 0 0  spec 0.5 0.5 0.5  shi 10  trans 0
+MATERIAL "" rgb 0.20 0.20 0.20 amb 0.10 0.10 0.10 emis 0.60 0.60 0.60 spec 0.90 0.90 0.90 shi 500 trans 0 
 OBJECT world
 kids 3
 OBJECT poly
