--- a/torcs/torcs/data/cars/models/clkdtm/Makefile
+++ b/torcs/torcs/data/cars/models/clkdtm/Makefile
@@ -19,9 +19,11 @@
 
 DATADIR   = cars/clkdtm
 
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print)  $(shell find *.rgb -maxdepth 0 -type f -print)  $(shell find *.ac -maxdepth 0 -type f -print) $(shell find *.xcf -maxdepth 0 -type f -print)
+DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
+            $(shell find *.rgb -maxdepth 0 -type f -print) \
+            $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA)
+data-cars-extra_PKGFILES	= $(DATA) clkdtm.xcf $(shell find *.ac -maxdepth 0 -type f -print)
 
 data-cars-extra_PKGDIR	= $(DATADIR)
 
