--- a/torcs/torcs/data/cars/models/lotus-gt1/Makefile
+++ b/torcs/torcs/data/cars/models/lotus-gt1/Makefile
@@ -19,11 +19,11 @@
 
 DATADIR   = cars/lotus-gt1
 
-DATA      = lotus-gt1.xml  lotus-gt1.ac \
-	    lotus-gt1-base.ac texmapper.xml \
-	    tex-wheel.rgb lotus-gt1.rgb lotus-gt1-512.rgb lotus-gt1-src.ac
+DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
+            $(shell find *.rgb -maxdepth 0 -type f -print) \
+            $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA)
+data-cars-extra_PKGFILES	= $(DATA) $(shell find *.ac -maxdepth 0 -type f -print)
 
 data-cars-extra_PKGDIR	= $(DATADIR)
 
