--- a/torcs/torcs/data/cars/models/gt40/Makefile
+++ b/torcs/torcs/data/cars/models/gt40/Makefile
@@ -15,13 +15,15 @@
 #
 ##############################################################################
 
-DATADIR   = cars/gt40
+CAR       = gt40
 
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
-            $(shell find *.rgb -maxdepth 0 -type f -print) \
+DATADIR   = cars/$(CAR)
+
+DATA      = $(CAR).xml \
+            $(CAR).rgb tex-wheel.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA) gt40.xcf $(shell find *.ac -maxdepth 0 -type f -print)
+data-cars-extra_PKGFILES	= $(DATA)
 
 data-cars-extra_PKGDIR	= $(DATADIR)
 
