--- a/torcs/torcs/data/cars/models/acura-nsx-sz/Makefile
+++ b/torcs/torcs/data/cars/models/acura-nsx-sz/Makefile
@@ -15,15 +15,15 @@
 #
 ##############################################################################
 
-
+CAR       = acura-nsx-sz
 
 DATADIR   = cars/acura-nsx-sz
 
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
-            $(shell find *.rgb -maxdepth 0 -type f -print) \
+DATA      = $(CAR).xml \
+            $(CAR).rgb tex-wheel.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA) acura-nsx-sz-512.xcf $(shell find *.ac -maxdepth 0 -type f -print)
+data-cars-extra_PKGFILES	= $(DATA)
 
 data-cars-extra_PKGDIR		= $(DATADIR)
 
