--- a/torcs/torcs/data/cars/models/baja-bug/Makefile
+++ b/torcs/torcs/data/cars/models/baja-bug/Makefile
@@ -15,17 +15,17 @@
 #
 ##############################################################################
 
-
+CAR       = baja-bug
 
 DATADIR   = cars/baja-bug
 
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
-            $(shell find *.rgb -maxdepth 0 -type f -print) \
+DATA      = $(CAR).xml \
+            $(CAR).rgb tex-wheel.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA) baja-bug.xcf $(shell find *.ac -maxdepth 0 -type f -print)
+data-cars-extra_PKGFILES	= $(DATA)
 
-data-cars-extra_PKGDIR	= $(DATADIR)
+data-cars-extra_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
