--- a/torcs/torcs/data/cars/models/cg-nascar-rwd/Makefile
+++ b/torcs/torcs/data/cars/models/cg-nascar-rwd/Makefile
@@ -15,14 +15,15 @@
 #
 ##############################################################################
 
+CAR       = cg-nascar-rwd
 
-DATADIR   = cars/cg-nascar-rwd
+DATADIR   = cars/$(CAR)
 
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
-            $(shell find *.rgb -maxdepth 0 -type f -print) \
+DATA      = $(CAR).xml \
+            $(CAR).rgb tex-wheel.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES = $(DATA) $(shell find *.ac -maxdepth 0 -type f -print)
+data-cars-extra_PKGFILES = $(DATA)
 
 data-cars-extra_PKGDIR	= $(DATADIR)
 
