--- a/torcs/torcs/data/cars/models/porsche-gt1/Makefile
+++ b/torcs/torcs/data/cars/models/porsche-gt1/Makefile
@@ -16,15 +16,15 @@
 ##############################################################################
 
 
+CAR       = porsche-gt1
 
+DATADIR   = cars/$(CAR)
 
-DATADIR   = cars/porsche-gt1
-
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
-            $(shell find *.rgb -maxdepth 0 -type f -print) \
+DATA      = $(CAR).xml \
+            $(CAR).rgb tex-wheel.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA) porsche-gt1.xcf $(shell find *.ac -maxdepth 0 -type f -print)
+data-cars-extra_PKGFILES	= $(DATA)
 
 data-cars-extra_PKGDIR	= $(DATADIR)
 
