--- a/torcs/torcs/data/cars/models/viper-gts-r/Makefile
+++ b/torcs/torcs/data/cars/models/viper-gts-r/Makefile
@@ -15,15 +15,15 @@
 #
 ##############################################################################
 
+CAR       = viper-gts-r
 
+DATADIR   = cars/$(CAR)
 
-DATADIR   = cars/viper-gts-r
-
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
-            $(shell find *.rgb -maxdepth 0 -type f -print) \
+DATA      = $(CAR).xml \
+            $(CAR).rgb tex-wheel.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA) $(shell find *.ac -maxdepth 0 -type f -print)
+data-cars-extra_PKGFILES	= $(DATA)
 
 data-cars-extra_PKGDIR	= $(DATADIR)
 
