--- a/torcs/torcs/data/tracks/dirt-4/Makefile
+++ b/torcs/torcs/data/tracks/dirt-4/Makefile
@@ -18,7 +18,7 @@
 
 DATADIR   = tracks/dirt/dirt-4
 
-DATA      = dirt-4.xml background.png dirt-4.ac dirt-4-relief.ac dirt-4.png
+DATA      = dirt-4.xml background.png dirt-4.ac dirt-4.png
 
 data-tracks-base_PKGFILES	= $(DATA)
 
