--- a/torcs/torcs/src/drivers/cylos2/Makefile
+++ b/torcs/torcs/src/drivers/cylos2/Makefile
@@ -18,11 +18,11 @@ SHIP      = ${ROBOT}.xml car1.xml cg-nascar-rwd.rgb logo.rgb
 
 SHIPSUBDIRS = $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
-PKGSUBDIRS		= ${SHIPSUBDIRS}
+#PKGSUBDIRS		= ${SHIPSUBDIRS}
 
-src-robots-base_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+#src-robots-base_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-src-robots-base_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+#src-robots-base_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
