--- a/torcs/torcs/src/drivers/human/tracks/mixed-2/Makefile
+++ b/torcs/torcs/src/drivers/human/tracks/mixed-2/Makefile
@@ -21,6 +21,10 @@ SHIPDIR   = drivers/${ROBOT}/tracks/mixed-2
 
 SHIP      = $(shell find *.xml -maxdepth 0 -type f -print)
 
+CONFIGCREATEDIRS = ${SHIPDIR}
+
+CONFIG    = $(SHIP)
+
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
 src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
