--- a/torcs/torcs/src/modules/graphic/ssggraph/Makefile
+++ b/torcs/torcs/src/modules/graphic/ssggraph/Makefile
@@ -29,6 +29,10 @@ SHIPDIR   = config
 
 SHIP      = graph.xml
 
+CONFIGCREATEDIRS = ${SHIPDIR}
+
+CONFIG    = $(SHIP)
+
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
 src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
