--- a/torcs/torcs/src/raceman/Makefile
+++ b/torcs/torcs/src/raceman/Makefile
@@ -22,6 +22,10 @@ SHIPCREATEDIRS = $(shell find * -maxdepth 0 -name '*.xml' -print | sed -e 's!\.x
 
 SHIP      = $(shell find * -maxdepth 0 -name '*.xml' -print)
 
+CONFIGCREATEDIRS = ${SHIPCREATEDIRS} ${SHIPDIR}
+
+CONFIG = ${SHIP}
+
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
 src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
