--- a/torcs/torcs/src/tools/launcher/torcs.in
+++ b/torcs/torcs/src/tools/launcher/torcs.in
@@ -17,7 +17,7 @@
 #
 ##############################################################################
 
-DEFAULT_RUNTIME=@prefix@/games/@PACKAGE@
+DEFAULT_RUNTIME=@prefix@/share/games/@PACKAGE@
 
 LOCAL_CONF=$HOME/.torcs
 
