--- a/torcs/torcs/Make-config.in
+++ b/torcs/torcs/Make-config.in
@@ -26,7 +26,7 @@ exec_prefix = @exec_prefix@
 
 bindir = @bindir@
 libdir = @libdir@
-instdir = ${prefix}/games/@PACKAGE@
+instdir = ${prefix}/share/games/@PACKAGE@
 
 top_builddir = .
 
