--- a/torcs/torcs/src/tools/package/specfiles/torcs-data-cars-extra.spec.in
+++ b/torcs/torcs/src/tools/package/specfiles/torcs-data-cars-extra.spec.in
@@ -1,7 +1,7 @@
 Summary: TORCS - Extra car pack
 Name: TORCS-data-cars-extra
 Version: @VERSION@
-Release: 2
+Release: 1
 Epoch: 1
 Source: TORCS-%{version}-data-cars-extra.tgz
 Group: Amusements/Games
@@ -10,6 +10,7 @@ Copyright: GPL
 BuildArch: noarch
 URL: http://torcs.org
 Packager: Eric Espié <Eric.Espie@free.fr>
+Requires: TORCS
 
 %description
 Extra car pack for TORCS
@@ -20,15 +21,15 @@ Extra car pack for TORCS
 %build
 
 %install
-mkdir -p $RPM_BUILD_ROOT/%{_prefix}/games/torcs
-cp -r * $RPM_BUILD_ROOT/%{_prefix}/games/torcs
+mkdir -p $RPM_BUILD_ROOT/%{_prefix}/share/games/torcs
+cp -r * $RPM_BUILD_ROOT/%{_prefix}/share/games/torcs
 
 %clean
 rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root,-)
-%{_prefix}/games/torcs/*
+%{_prefix}/share/games/torcs/*
 
 %changelog
 * Thu Jan 02 2003 Eric Espié <Eric.Espie@free.fr> 1.2.0
