--- a/torcs/torcs/src/tools/package/specfiles/torcs-data.spec.in
+++ b/torcs/torcs/src/tools/package/specfiles/torcs-data.spec.in
@@ -1,7 +1,7 @@
 Summary: The Open Racing Car Simulator - DATA
 Name: TORCS-data
 Version: @VERSION@
-Release: 2
+Release: 1
 Epoch: 1
 Source: TORCS-%{version}-data.tgz
 Group: Amusements/Games
@@ -20,17 +20,20 @@ Mandatory data (images, fonts, menus...) for TORCS
 %build
 
 %install
-mkdir -p $RPM_BUILD_ROOT/%{_prefix}/games/torcs
-cp -r * $RPM_BUILD_ROOT/%{_prefix}/games/torcs
+mkdir -p $RPM_BUILD_ROOT/%{_prefix}/share/games/torcs
+cp -r * $RPM_BUILD_ROOT/%{_prefix}/share/games/torcs
 
 %clean
 rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root,-)
-%{_prefix}/games/torcs/*
+%{_prefix}/share/games/torcs/*
 
 %changelog
+* Mon Mar 24 2003 Eric Espié <Eric.Espie@free.fr> 1.2.0
+- new version
+
 * Mon Jul 15 2002 Eric Espié <Eric.Espie@free.fr> 1.1.0-2
 - improved specfile
 
