--- a/torcs/torcs/data/cars/models/clkdtm/Makefile
+++ b/torcs/torcs/data/cars/models/clkdtm/Makefile
@@ -23,9 +23,9 @@ DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
             $(shell find *.rgb -maxdepth 0 -type f -print) \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA) clkdtm.xcf $(shell find *.ac -maxdepth 0 -type f -print)
+data_PKGFILES	= $(DATA) clkdtm.xcf $(shell find *.ac -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGDIR	= $(DATADIR)
+data_PKGDIR	= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
