--- a/torcs/torcs/Make-config.in
+++ b/torcs/torcs/Make-config.in
@@ -38,13 +38,15 @@ ARFLAGS = ruv
 RANLIB = @RANLIB@
 
 INSTALL = @INSTALL@
-INSTALL_PROGRAM = @INSTALL@ -m 755
-INSTALL_DATA = @INSTALL@ -m 644
+#INSTALL_PROGRAM = @INSTALL@ -m 755
+#INSTALL_DATA = @INSTALL@ -m 644
+INSTALL_PROGRAM = @INSTALL_PROGRAM@
+INSTALL_DATA = @INSTALL_DATA@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 
 CFLAGSD = -D_SVID_SOURCE -D_BSD_SOURCE -DSHM
-CXXFLAGS +=  @CXXFLAGS@ ${CFLAGSD}
+CXXFLAGS +=  @CXXFLAGS@ @CPPFLAGS@ ${CFLAGSD}
 CFLAGS   +=  @CFLAGS@ ${CFLAGSD}
 
 #EXT_LIBS = -lpthread @LIBS@
@@ -55,7 +57,7 @@ LDFLAGS +=  @LDFLAGS@ -L${EXPORTBASE}/lib -L/usr/lib
 #INCFLAGS =  -I${EXPORTBASE}/include -I/usr/include -I/usr/local/include
 INCFLAGS =  -I${EXPORTBASE}/include 
 
-CPP = @CPP@ $(CPPFLAGS) -M -D__DEPEND__
+CPP = @CPP@ @CPPFLAGS@ -M -D__DEPEND__
 
 PACKAGE = @PACKAGE@
 VERSION = @VERSION@
